# qpoases_vendor

./: .gitignore  CHANGELOG.rst  CMakeLists.txt  README.md  package.xml  qpoases_vendorConfig.cmake.in  setup.py
